[package]
name = "clef-viewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clef-viewer"
path = "src/main.rs"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["datepicker"] }
serde_json = "1"
rfd = "0.15"
chrono = "0.4"
evalexpr = "11"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
